<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:layout_width="236dp"
        android:layout_height="134dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:src="@drawable/logo"
        android:contentDescription="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="194dp"
        android:fontFamily="@font/oswald"
        android:text="@string/title_text"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="283dp"
        android:layout_height="116dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="253dp"
        android:text="@string/intro_text"
        android:fontFamily="@font/oswald"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_start"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/btn_start"
        android:textAllCaps="true"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp"
        android:fontFamily="@font/oswald"
        android:textStyle="bold"
        android:background="@drawable/btn_rounded"/>

</RelativeLayout>