<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="236dp"
        android:layout_height="134dp"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_rounded_edit_text"
        android:cursorVisible="true"
        android:drawablePadding="25dp"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:hint="@string/edit_email"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:textColor="#333333"
        android:textColorHint="#d8d8d8"
        android:layout_below="@+id/logo"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_rounded_edit_text"
        android:cursorVisible="true"
        android:drawablePadding="25dp"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:textColor="#333333"
        android:textColorHint="#d8d8d8"
        android:textCursorDrawable="@null"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_alignStart="@+id/logo"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/oswald"
        android:text="@string/btn_login"
        android:textAllCaps="true"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_alignStart="@+id/logo"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="#ffb52b"
        android:fontFamily="@font/oswald"
        android:text="@string/btn_sign_up"
        android:textAllCaps="true"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>